src/styles/scss/layout/_Navigation.scss
.Navigation {
  background: transparent;
  border-bottom: 2px solid rgba($faint-grey, 0.25);
  display: flex;
  align-items: center;
  list-style: none;
  padding: 1rem;
}

.Navigation__item {
  color: $matt-grey;
  text-decoration: none;
  font-size: 1.8rem;
  margin: 0 0.5rem;

  @media (min-width: 1150px) {
    font-size: 2rem; 
    margin: 0 1rem;
  }
}

.Navigation__item--brand {
  @extend .Navigation__item;
  font-size: 2rem;
  font-weight: 700;
  padding-bottom: 0.3rem;
  flex: 1;

  @media (min-width: 1150px) {
    font-size: 3rem; 
  }
}

.Navigation__item--account {
  @extend .Navigation__item;
  border-left : 1.5px solid;
  padding-left: 2rem;
  line-height: 1;
}

.Navigation__item--action {
  @extend .Navigation__item;
  background: none;
  padding: 0.6rem 1rem;
  font-size: 1.4rem;
  margin: 0;
  border: 1px solid $matt-grey;
  outline: none;
  transition: all 0.1s ease;

  @media (min-width: 1150px) {
  font-size: 1.6rem;
  }

  &:hover {
    background: $matt-grey;
    color: white;
  }
  
  &--signout {
    @extend .Navigation__item--action;
    border-radius: 1px;
  }

  &--signin {
    @extend .Navigation__item--action;
    margin-left: 1.5rem;
    border-top-left-radius: 1px;
    border-bottom-left-radius: 1px;
  }

  &--signup {
    @extend .Navigation__item--action;
    border-left: none;
    border-top-right-radius: 1px;
    border-bottom-right-radius: 1px;
  }

}

